added update username apis
