# api/api.pb.gw.go
@@ -170,8 +170,8 @@ func local_request_UserAuthentication_DeleteUser_0(ctx context.Context, marshale
 
 }
 
-func request_UserAuthentication_AuthenticateWithGoogle_0(ctx context.Context, marshaler runtime.Marshaler, client UserAuthenticationClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq AuthenticateWithGoogleRequest
+func request_UserAuthentication_UpdateUser_0(ctx context.Context, marshaler runtime.Marshaler, client UserAuthenticationClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateUserRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -182,13 +182,13 @@ func request_UserAuthentication_AuthenticateWithGoogle_0(ctx context.Context, ma
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.AuthenticateWithGoogle(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.UpdateUser(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_UserAuthentication_AuthenticateWithGoogle_0(ctx context.Context, marshaler runtime.Marshaler, server UserAuthenticationServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq AuthenticateWithGoogleRequest
+func local_request_UserAuthentication_UpdateUser_0(ctx context.Context, marshaler runtime.Marshaler, server UserAuthenticationServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateUserRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -199,7 +199,7 @@ func local_request_UserAuthentication_AuthenticateWithGoogle_0(ctx context.Conte
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := server.AuthenticateWithGoogle(ctx, &protoReq)
+	msg, err := server.UpdateUser(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -711,18 +711,18 @@ func RegisterUserAuthenticationHandlerServer(ctx context.Context, mux *runtime.S
 
 	})
 
-	mux.Handle("POST", pattern_UserAuthentication_AuthenticateWithGoogle_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("PUT", pattern_UserAuthentication_UpdateUser_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/apidefinitions.UserAuthentication/AuthenticateWithGoogle", runtime.WithHTTPPathPattern("/auth/google"))
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/apidefinitions.UserAuthentication/UpdateUser", runtime.WithHTTPPathPattern("/v1/user/update"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_UserAuthentication_AuthenticateWithGoogle_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_UserAuthentication_UpdateUser_0(rctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -730,7 +730,7 @@ func RegisterUserAuthenticationHandlerServer(ctx context.Context, mux *runtime.S
 			return
 		}
 
-		forward_UserAuthentication_AuthenticateWithGoogle_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_UserAuthentication_UpdateUser_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -1170,23 +1170,23 @@ func RegisterUserAuthenticationHandlerClient(ctx context.Context, mux *runtime.S
 
 	})
 
-	mux.Handle("POST", pattern_UserAuthentication_AuthenticateWithGoogle_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("PUT", pattern_UserAuthentication_UpdateUser_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/apidefinitions.UserAuthentication/AuthenticateWithGoogle", runtime.WithHTTPPathPattern("/auth/google"))
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/apidefinitions.UserAuthentication/UpdateUser", runtime.WithHTTPPathPattern("/v1/user/update"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_UserAuthentication_AuthenticateWithGoogle_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_UserAuthentication_UpdateUser_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_UserAuthentication_AuthenticateWithGoogle_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_UserAuthentication_UpdateUser_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -1220,7 +1220,7 @@ var (
 
 	pattern_UserAuthentication_DeleteUser_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "user", "delete", "username"}, ""))
 
-	pattern_UserAuthentication_AuthenticateWithGoogle_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"auth", "google"}, ""))
+	pattern_UserAuthentication_UpdateUser_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "user", "update"}, ""))
 
 	pattern_UserAuthentication_AuthenticateWithGoogleCallback_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"auth", "google", "callback"}, ""))
 )
@@ -1232,7 +1232,7 @@ var (
 
 	forward_UserAuthentication_DeleteUser_0 = runtime.ForwardResponseMessage
 
-	forward_UserAuthentication_AuthenticateWithGoogle_0 = runtime.ForwardResponseMessage
+	forward_UserAuthentication_UpdateUser_0 = runtime.ForwardResponseMessage
 
 	forward_UserAuthentication_AuthenticateWithGoogleCallback_0 = runtime.ForwardResponseMessage
 )
