# api/api_grpc.pb.go
@@ -108,7 +108,7 @@ type UserAuthenticationClient interface {
 	LoginUser(ctx context.Context, in *LoginUserRequest, opts ...grpc.CallOption) (*OAuth2Token, error)
 	RegisterUser(ctx context.Context, in *RegisterUserRequest, opts ...grpc.CallOption) (*OAuth2Token, error)
 	DeleteUser(ctx context.Context, in *DeleteUserRequest, opts ...grpc.CallOption) (*DeleteUserResponse, error)
-	AuthenticateWithGoogle(ctx context.Context, in *AuthenticateWithGoogleRequest, opts ...grpc.CallOption) (*AuthenticateWithGoogleResponse, error)
+	UpdateUser(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*UpdateUserResponse, error)
 	AuthenticateWithGoogleCallback(ctx context.Context, in *AuthenticateWithGoogleCallbackRequest, opts ...grpc.CallOption) (*OAuth2Token, error)
 }
 
@@ -147,9 +147,9 @@ func (c *userAuthenticationClient) DeleteUser(ctx context.Context, in *DeleteUse
 	return out, nil
 }
 
-func (c *userAuthenticationClient) AuthenticateWithGoogle(ctx context.Context, in *AuthenticateWithGoogleRequest, opts ...grpc.CallOption) (*AuthenticateWithGoogleResponse, error) {
-	out := new(AuthenticateWithGoogleResponse)
-	err := c.cc.Invoke(ctx, "/apidefinitions.UserAuthentication/AuthenticateWithGoogle", in, out, opts...)
+func (c *userAuthenticationClient) UpdateUser(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*UpdateUserResponse, error) {
+	out := new(UpdateUserResponse)
+	err := c.cc.Invoke(ctx, "/apidefinitions.UserAuthentication/UpdateUser", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -172,7 +172,7 @@ type UserAuthenticationServer interface {
 	LoginUser(context.Context, *LoginUserRequest) (*OAuth2Token, error)
 	RegisterUser(context.Context, *RegisterUserRequest) (*OAuth2Token, error)
 	DeleteUser(context.Context, *DeleteUserRequest) (*DeleteUserResponse, error)
-	AuthenticateWithGoogle(context.Context, *AuthenticateWithGoogleRequest) (*AuthenticateWithGoogleResponse, error)
+	UpdateUser(context.Context, *UpdateUserRequest) (*UpdateUserResponse, error)
 	AuthenticateWithGoogleCallback(context.Context, *AuthenticateWithGoogleCallbackRequest) (*OAuth2Token, error)
 	mustEmbedUnimplementedUserAuthenticationServer()
 }
@@ -190,8 +190,8 @@ func (UnimplementedUserAuthenticationServer) RegisterUser(context.Context, *Regi
 func (UnimplementedUserAuthenticationServer) DeleteUser(context.Context, *DeleteUserRequest) (*DeleteUserResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DeleteUser not implemented")
 }
-func (UnimplementedUserAuthenticationServer) AuthenticateWithGoogle(context.Context, *AuthenticateWithGoogleRequest) (*AuthenticateWithGoogleResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method AuthenticateWithGoogle not implemented")
+func (UnimplementedUserAuthenticationServer) UpdateUser(context.Context, *UpdateUserRequest) (*UpdateUserResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateUser not implemented")
 }
 func (UnimplementedUserAuthenticationServer) AuthenticateWithGoogleCallback(context.Context, *AuthenticateWithGoogleCallbackRequest) (*OAuth2Token, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method AuthenticateWithGoogleCallback not implemented")
@@ -263,20 +263,20 @@ func _UserAuthentication_DeleteUser_Handler(srv interface{}, ctx context.Context
 	return interceptor(ctx, in, info, handler)
 }
 
-func _UserAuthentication_AuthenticateWithGoogle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(AuthenticateWithGoogleRequest)
+func _UserAuthentication_UpdateUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateUserRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(UserAuthenticationServer).AuthenticateWithGoogle(ctx, in)
+		return srv.(UserAuthenticationServer).UpdateUser(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/apidefinitions.UserAuthentication/AuthenticateWithGoogle",
+		FullMethod: "/apidefinitions.UserAuthentication/UpdateUser",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(UserAuthenticationServer).AuthenticateWithGoogle(ctx, req.(*AuthenticateWithGoogleRequest))
+		return srv.(UserAuthenticationServer).UpdateUser(ctx, req.(*UpdateUserRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -319,8 +319,8 @@ var UserAuthentication_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _UserAuthentication_DeleteUser_Handler,
 		},
 		{
-			MethodName: "AuthenticateWithGoogle",
-			Handler:    _UserAuthentication_AuthenticateWithGoogle_Handler,
+			MethodName: "UpdateUser",
+			Handler:    _UserAuthentication_UpdateUser_Handler,
 		},
 		{
 			MethodName: "AuthenticateWithGoogleCallback",
