# pkg/db/sqlc/models.go
@@ -10,29 +10,31 @@ import (
 )
 
 type Expense struct {
-	ID          int32          `json:"id"`
-	UserID      sql.NullInt32  `json:"user_id"`
-	Amount      sql.NullString `json:"amount"`
-	Description sql.NullString `json:"description"`
-	Category    sql.NullString `json:"category"`
-	CreatedAt   sql.NullTime   `json:"created_at"`
-	UpdatedAt   time.Time      `json:"updated_at"`
+	ID          int32         `json:"id"`
+	UserID      sql.NullInt32 `json:"user_id"`
+	Amount      string        `json:"amount"`
+	Description string        `json:"description"`
+	Category    string        `json:"category"`
+	CreatedAt   sql.NullTime  `json:"created_at"`
+	UpdatedAt   time.Time     `json:"updated_at"`
 }
 
 type Profile struct {
-	ID        int32          `json:"id"`
-	UserID    sql.NullInt32  `json:"user_id"`
-	Bio       sql.NullString `json:"bio"`
-	CreatedAt sql.NullTime   `json:"created_at"`
-	UpdatedAt time.Time      `json:"updated_at"`
+	ID             int32         `json:"id"`
+	UserID         sql.NullInt32 `json:"user_id"`
+	Bio            string        `json:"bio"`
+	Name           string        `json:"name"`
+	ProfilePicture string        `json:"profile_picture"`
+	CreatedAt      sql.NullTime  `json:"created_at"`
+	UpdatedAt      time.Time     `json:"updated_at"`
 }
 
 type Report struct {
-	ID        int32          `json:"id"`
-	UserID    sql.NullInt32  `json:"user_id"`
-	Title     sql.NullString `json:"title"`
-	CreatedAt sql.NullTime   `json:"created_at"`
-	UpdatedAt time.Time      `json:"updated_at"`
+	ID        int32         `json:"id"`
+	UserID    sql.NullInt32 `json:"user_id"`
+	Title     string        `json:"title"`
+	CreatedAt sql.NullTime  `json:"created_at"`
+	UpdatedAt time.Time     `json:"updated_at"`
 }
 
 type Setting struct {
